Update user service

--- a/addon/components/forms/field-group/template.hbs
+++ b/addon/components/forms/field-group/template.hbs
@@ -2,12 +2,12 @@
   {{forms/label-field  for=value value=label }}
   {{#if optional}}
     <span class="optional pull-right cap">
-      &nbsp;{{t 'forms.optional'}}
+      &nbsp;{{t 'supertreeAuth.forms.optional'}}
     </span>
   {{/if}}
 {{else}}
   {{#if optional}}
-    <span class="optional">{{t 'forms.optional'}}</span>
+    <span class="optional">{{t 'supertreeAuth.forms.optional'}}</span>
   {{/if}}
 {{/if}}
 
